<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.all_in_blind.GameViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".MainActivity">


        <TextView
            android:id="@+id/scoreTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:rotation="180"
            android:text="@{@string/score(viewModel.winsP2, viewModel.winsP1)}"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/score_0_0" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scoreTop">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/player2Card1"
                android:layout_width="63dp"
                android:layout_height="88dp"
                android:layout_margin="12dp"
                android:contentDescription="@string/card_of_player"
                app:srcCompat="@drawable/card_back" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/player2Card2"
                android:layout_width="63dp"
                android:layout_height="88dp"
                android:layout_margin="12dp"
                android:contentDescription="@string/card_of_player"
                app:srcCompat="@drawable/card_back" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/flop1"
            android:layout_width="63dp"
            android:layout_height="88dp"
            android:layout_margin="12dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat2"
            app:layout_constraintEnd_toStartOf="@+id/btnDeal"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat"
            tools:srcCompat="@drawable/card_back" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/flop2"
            android:layout_width="63dp"
            android:layout_height="88dp"
            android:layout_margin="12dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat2"
            app:layout_constraintEnd_toStartOf="@+id/flop1"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat"
            tools:srcCompat="@drawable/card_back" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/flop3"
            android:layout_width="63dp"
            android:layout_height="88dp"
            android:layout_margin="12dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat2"
            app:layout_constraintEnd_toStartOf="@+id/flop2"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat"
            tools:srcCompat="@drawable/card_back" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/turn"
            android:layout_width="63dp"
            android:layout_height="88dp"
            android:layout_margin="12dp"
            android:rotation="90"
            app:layout_constraintEnd_toStartOf="@+id/river"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/flop3"
            tools:srcCompat="@drawable/card_back" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/river"
            android:layout_width="63dp"
            android:layout_height="88dp"
            android:layout_margin="12dp"
            android:rotation="90"
            app:layout_constraintEnd_toEndOf="@+id/flop1"
            app:layout_constraintTop_toBottomOf="@+id/flop1"
            tools:srcCompat="@drawable/card_back" />

        <Button
            android:id="@+id/btnDeal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:rotation="90"
            android:text="@string/deal"
            app:layout_constraintBottom_toTopOf="@+id/scoreBut"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scoreTop" />

        <Button
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:rotation="90"
            android:text="@string/reset"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnDeal" />

        <TextView
            android:id="@+id/scoreBut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@{@string/score(viewModel.winsP1, viewModel.winsP2)}"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/score_0_0" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView4"
            android:layout_width="63dp"
            android:layout_height="88dp"
            android:layout_margin="12dp"
            android:contentDescription="@string/deck_of_cards"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnDeal"
            app:srcCompat="@drawable/card_back" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:layout_constraintBottom_toTopOf="@+id/scoreBut"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/player1Card1"
                android:layout_width="63dp"
                android:layout_height="88dp"
                android:layout_margin="12dp"
                android:contentDescription="@string/card_of_player"
                app:srcCompat="@drawable/card_back" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/player1Card2"
                android:layout_width="63dp"
                android:layout_height="88dp"
                android:layout_margin="12dp"
                android:contentDescription="@string/card_of_player"
                app:srcCompat="@drawable/card_back" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>